Tue Sep 28 04:25:21 2004  Tim Janik  <timj@gtk.org>

	* configure.in: fixed up package name.

	* README: describe installation path handling of this package.

	* Makefile.am: fix include paths.

Tue Sep 28 01:45:21 2004  Tim Janik  <timj@gtk.org>

	* bsemididevice-alsa.c: preliminary implementation of read handler.

Tue Sep 28 00:57:57 2004  Tim Janik  <timj@gtk.org>

	* bsepcmdevice-alsa.c (alsa_device_write): issue dummy reads instead of
	calling snd_pcm_forward() which produces annoying debugging messages.

Tue Sep 28 00:38:31 2004  Tim Janik  <timj@gtk.org>

	* bsemididevice-alsa.h: 
	* bsemididevice-alsa.c: object skeleton for a an ALSA MIDI driver.

Mon Sep 27 09:48:16 2004  Tim Janik  <timj@gtk.org>

	* bsepcmdevice-alsa.[hc]: implemented ALSA pcm driver plugin,
	that works down to 1ms latency.

	* configure.in: plugin package setup, version 0.6.3-rc1.