@@ -1,3 +1,7 @@
+Wed Sep 29 19:51:29 2004  Tim Janik  <timj@gtk.org>
+
+	* bsemididevice-alsa.c: handle IO through sequencer io watch.
+
 Tue Sep 28 04:25:21 2004  Tim Janik  <timj@gtk.org>
 
 	* configure.in: fixed up package name.
